fixing overflow bug

--- a/css/main.sass
+++ b/css/main.sass
@@ -151,6 +151,7 @@ textarea
 
 .section
   padding: 0 40px
+  overflow: hidden
 
 
 /*-----------------------------------------------------------------------------------*/
